--- a/food-blog-app/frontend/src/App.css
+++ b/food-blog-app/frontend/src/App.css
@@ -330,7 +330,7 @@ section{
 
 .active{
   color:black !important;
-  background-color: rgb(249, 191, 97);
+  background-color: rgb(244, 192, 107);
 }
 
 
@@ -340,9 +340,13 @@ section{
 @media (max-width: 768px) {
   header ul {
     width: 70%;
-    font-size: 14px;
+    font-size: 11px;
   }
 
+  header ul li .login{
+    
+    font-size: 12px;
+  }
   .home {
     flex-direction: column;
     gap: 2rem;
@@ -357,6 +361,16 @@ section{
   .home button {
     width: 150px;
     font-size: 14px;
+  }
+  .home .right img{
+    width: 190px;
+    height: 160px;
+
+  }
+  .bg svg{
+  position: absolute;
+  
+  
   }
 
   .card-container {
@@ -388,8 +402,8 @@ section{
   }
 
   header h2 {
-    font-size: 18px;
-    margin-bottom: 0.5rem;
+    font-size: 20px;
+    margin-bottom: 0.3rem;
   }
 
   header ul {
@@ -397,7 +411,7 @@ section{
     flex-direction: row;       /* horizontal layout */
     justify-content: center;
     align-items: center;
-    gap: 0.8rem;
+    gap: 0.2rem;
     width: 100%;
     overflow-x: auto;          /* allow scrolling if too many items */
     scrollbar-width: none;     /* hide scrollbar (Firefox) */
@@ -408,7 +422,7 @@ section{
 
     header ul li a {
     display: inline-block;
-    padding: 6px 12px;
+    padding: 6px 6px;
     border-radius: 5px;
     white-space: nowrap;       /* prevent text wrap */
   }
